[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://Menus/immortal.tres" type="DynamicFont" id=2]

[node name="NetworkSetup" type="Control"]
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfigure"]
margin_left = 30.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="MultiplayerConfigure/VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Return"
flat = true
align = 0

[node name="Control" type="Control" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 42.0
margin_right = 160.0
margin_bottom = 216.0

[node name="Host" type="Label" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "HOST"

[node name="CreateServerButton" type="Button" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 160.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Label" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 160.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "Port: 28960"

[node name="Control2" type="Control" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 160.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )

[node name="Join" type="Label" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 160.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 2 )
text = "JOIN"

[node name="ServerAddress" type="LineEdit" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 160.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "IP"

[node name="JoinServerButton" type="Button" parent="MultiplayerConfigure/VBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 160.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 2 )
text = "Join Server"

[connection signal="focus_entered" from="MultiplayerConfigure/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_focus_entered"]
[connection signal="mouse_entered" from="MultiplayerConfigure/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_mouse_entered"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="focus_entered" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/CreateServerButton" to="." method="_on_CreateServerButton_focus_entered"]
[connection signal="mouse_entered" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/CreateServerButton" to="." method="_on_CreateServerButton_mouse_entered"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="focus_entered" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/JoinServerButton" to="." method="_on_JoinServerButton_focus_entered"]
[connection signal="mouse_entered" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/JoinServerButton" to="." method="_on_JoinServerButton_mouse_entered"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/VBoxContainer/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
